2009-02-17 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-object-api.h:
	* src/api/na-object-item.h:
	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-gtk-utils.h:
	* src/nact/nact-iaction-tab.c: Update NactIActionTab interface.

	* core/na-object-action-fn.h:
	* core/na-object-action-priv.h:
	* core/na-object-fn.h:
	* core/na-object-id-fn.h:
	* core/na-object-id-priv.h:
	* core/na-object-item-fn.h:
	* core/na-object-item-priv.h:
	* core/na-object-menu-fn.h:
	* core/na-object-menu-priv.h:
	* core/na-object-profile-fn.h:
	* core/na-object-profile-priv.h: Remove no more used files.

	* src/api/na-iduplicable.h:
	* src/api/na-object-api.h:
	* src/api/na-object-item.h:
	* src/api/na-object.h:
	* src/core/na-iduplicable.c:
	* src/core/na-object-item.c:
	* src/core/na-object.c:
	* src/nact/nact-iactions-list-bis.c:
	* src/nact/nact-iactions-list.c:
	* src/nact/nact-window.c:
	* src/nact/nact-window.h: Update NactIActionsList interface.

	* src/api/na-iduplicable.h:
	* src/api/na-object-api.h:
	* src/api/na-object-item.h:
	* src/core/na-exporter.c:
	* src/core/na-exporter.h:
	* src/core/na-iduplicable.c:
	* src/core/na-object-item.c:
	* src/nact/Makefile.am:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-clipboard.c:
	* src/nact/nact-clipboard.h:
	* src/nact/nact-confirm-logout.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-export-format.c:
	* src/nact/nact-export-format.h:
	* src/nact/nact-iprefs.h:
	* src/nact/nact-main-menubar.h:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-export.h:
	* src/nact/nact-assistant-export.ui:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-import-ask.c:
	* src/nact/nact-import-ask.h:
	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h:
	* src/nact/nact-tree-model.h: Update Nact classes.

	Refactor: move all XML code to src/io-xml plugin.

	* src/nact/Makefile.am:
	* src/nact/base-application-class.h:
	* src/nact/base-assistant.h:
	* src/nact/base-assistant.h:
	* src/nact/base-builder.h: