@@ -35,7 +35,6 @@
 #include <glib/gi18n.h>
 #include <string.h>
 
-#include <api/na-core-utils.h>
 #include <api/na-object-api.h>
 
 #include <core/na-io-provider.h>
