@@ -1,6 +1,14 @@
 2009-02-17 Pierre Wieser <pwieser@trychlos.org>
 
 	* src/api/na-object-api.h:
+	* src/api/na-object-profile.h:
+	* src/core/na-object-profile.c:
+	* src/nact/nact-iaction-tab.c:
+	* src/nact/nact-iadvanced-tab.c:
+	* src/nact/nact-ibackground-tab.c: Update NactIBackgroundTab
+	interface.
+
+	* src/api/na-object-api.h:
 	* src/api/na-object-item.h:
 	* src/nact/nact-gtk-utils.c:
 	* src/nact/nact-gtk-utils.h:
